fix white space issue when scrolling remove close icon from ToS modal

--- a/src/assets/styles/Global.scss
+++ b/src/assets/styles/Global.scss
@@ -76,6 +76,7 @@
 }
 
 body {
+  overflow-y: hidden;
   box-sizing: border-box;
   -webkit-box-sizing: border-box;
   font-family: "ProximaNova", sans-serif;
